@@ -49,7 +49,7 @@
                     :: <a href="<%= request.getContextPath() %>/logout.do"> <img src="<%= request.getContextPath() %>/images/exit.png" title="<%=messages.getString("logOut")%>" border="0" /></a>
                     <img src="<%= request.getContextPath() %>/images/vertical_16px.gif">
 					
-					<a href="<%= request.getContextPath() %>/app/admin.do">Admin Console 2</a>
+					<a href="<%= request.getContextPath() %>/app/reports.do">Admin Console 2</a>
                 </td>
                 <td class="attr" align="right" width="50%">
 
